# ARM_SOC

./: .gitignore  CMakeLists.txt  Makefile  README.md  armv7_m.yaml  project.yaml  projects.yaml
boot/: CMakeLists.txt  boot.ld  init.S
include/asm/: arch_atomic.h  arch_config.h  arch_coprocessor .h  arch_feature.h  arch_nvic.h  arch_printk.h  arch_regs.h  barrier.h  cache.h  context_stack.h  gcc_type.h  math_utils.h  mpu.h  traps.h  vfp.h
kernel/: CMakeLists.txt  arch_init.c  early_printk.c  traps.c
lib/: ring_buffer.c
lib/include/: math_util.h  ring_buffer.h
mm/: CMakeLists.txt  cache.c  fault.c  mm_fault.c  mpu.c
project/make/: Makefile
project/mdk/: armv7_m.uvoptx  armv7_m.uvprojx
records/: armv7_m.yaml
test/: early_printk_test.c  main.c  mm_fault_test.c  mpu_test.c
